--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <body>
     <div class="container">
         <div class="page-turn"></div>
-        <img src="https://drive.google.com/file/d/13rFxhoa1e7PwlCnj67954N19a8JessCH/view?usp=sharing" class="logo" alt="Miko Logo">
+        <img src="./miko_logo_print.png" class="logo" alt="Miko Logo">
         <div class="intro-text">Your Story Begins...</div>
     </div>
 </body>
